WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
230077
[Win] REGRESSION(
r282123
): some layout tests are failing because the bgcolor of text input forms are unexpectedly black
https://bugs.webkit.org/show_bug.cgi?id=230077
Summary
[Win] REGRESSION(r282123): some layout tests are failing because the bgcolor ...
Fujii Hironori
Reported
2021-09-08 20:19:18 PDT
[Win] REGRESSION(
r282123
): some layout tests are failing because the bgcolor of text input forms are unexpectedly black Since
r282123
(
241420@main
,
Bug 229976
), WinCairo is failing some layout tests. Regressions: Unexpected text-only failures (47) editing/input/reveal-caret-of-multiline-input.html [ Failure ] editing/inserting/4960120-1.html [ Failure ] editing/inserting/before-after-input-element.html [ Failure ] editing/pasteboard/4641033.html [ Failure ] editing/pasteboard/4944770-1.html [ Failure ] editing/pasteboard/4944770-2.html [ Failure ] editing/pasteboard/pasting-tabs.html [ Failure ] editing/selection/3690703-2.html [ Failure ] editing/selection/3690703.html [ Failure ] editing/selection/3690719.html [ Failure ] editing/selection/4895428-3.html [ Failure ] editing/selection/4975120.html [ Failure ] editing/selection/caret-before-select.html [ Failure ] (..) Buildbot: builder WinCairo-64-bit-WKL-Release-Tests build 2532
https://build.webkit.org/#/builders/60/builds/2532
Attachments
Patch
(2.01 KB, patch)
2021-09-08 20:26 PDT
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
Patch
(1.98 KB, patch)
2021-09-08 21:49 PDT
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2021-09-08 20:26:28 PDT
Created
attachment 437701
[details]
Patch
Fujii Hironori
Comment 2
2021-09-08 21:49:58 PDT
Created
attachment 437708
[details]
Patch
Fujii Hironori
Comment 3
2021-09-09 13:05:40 PDT
Comment on
attachment 437708
[details]
Patch Clearing flags on attachment: 437708 Committed
r282237
(
241521@main
): <
https://commits.webkit.org/241521@main
>
Fujii Hironori
Comment 4
2021-09-09 13:05:44 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2021-09-09 13:06:15 PDT
<
rdar://problem/82939856
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug